--- a/spec/dummy/public/404.html
+++ b/spec/dummy/public/404.html
@@ -2,14 +2,8 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body {
-      background-color: #fff;
-      color: #666;
-      text-align: center;
-      font-family: arial, sans-serif;
-    }
-
+  <style>
+    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
       width: 25em;
       padding: 0 4em;
@@ -18,21 +12,16 @@
       border-right-color: #999;
       border-bottom-color: #999;
     }
-
-    h1 {
-      font-size: 100%;
-      color: #f00;
-      line-height: 1.5em;
-    }
+    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
 </head>
 
 <body>
-<!-- This file lives in public/404.html -->
-<div class="dialog">
-  <h1>The page you were looking for doesn't exist.</h1>
-
-  <p>You may have mistyped the address or the page may have moved.</p>
-</div>
+  <!-- This file lives in public/404.html -->
+  <div class="dialog">
+    <h1>The page you were looking for doesn't exist.</h1>
+    <p>You may have mistyped the address or the page may have moved.</p>
+  </div>
+  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
