--- a/spec/dummy/public/500.html
+++ b/spec/dummy/public/500.html
@@ -2,14 +2,8 @@
 <html>
 <head>
   <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body {
-      background-color: #fff;
-      color: #666;
-      text-align: center;
-      font-family: arial, sans-serif;
-    }
-
+  <style>
+    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
       width: 25em;
       padding: 0 4em;
@@ -18,21 +12,15 @@
       border-right-color: #999;
       border-bottom-color: #999;
     }
-
-    h1 {
-      font-size: 100%;
-      color: #f00;
-      line-height: 1.5em;
-    }
+    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
   </style>
 </head>
 
 <body>
-<!-- This file lives in public/500.html -->
-<div class="dialog">
-  <h1>We're sorry, but something went wrong.</h1>
-
-  <p>We've been notified about this issue and we'll take a look at it shortly.</p>
-</div>
+  <!-- This file lives in public/500.html -->
+  <div class="dialog">
+    <h1>We're sorry, but something went wrong.</h1>
+  </div>
+  <p>If you are the application owner check the logs for more information.</p>
 </body>
 </html>
